fix: 모바일 대응을 위한 flex-wrap 추가

--- a/src/ui/css/article/article.css
+++ b/src/ui/css/article/article.css
@@ -32,6 +32,7 @@
   background-color: var(--color-bg-pure);
   padding: 1px 6px;
   margin-right: 4px;
+  margin-bottom: 4px;
 }
 
 .article-text-package{
